--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       const form = document.getElementById('login')
       const pwd = document.getElementById('password')
       form.addEventListener('submit', function(e) {
-        e.preventDefault()
+        e.preventDefault();
         if (pwd.value === "oecresistance") {
           alert("bravo, vous avez trouvé, l'escape game est terminé")
         } else {
